# RootSocketKit

./: README.md  README_zh.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ly/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: driver.ko
app/src/main/cpp/: CMakeLists.txt  ly.cpp  service.cpp
app/src/main/cpp/include/: IMemReaderWriterProxy.h  IoctlBufferPool.h  MapRegionType.h  MemoryReaderWriter38.h
app/src/main/java/com/ly/: AccountPage.kt  AuthorizationPage.kt  FuctionPage.kt  HomePage.kt  LoggingPage.kt  MainActivity.kt
app/src/main/java/com/ly/debug/: GlobalApplication.kt  customcrashactivity.kt
app/src/main/java/com/ly/service/: Native.kt
app/src/main/java/com/ly/type/: Response.kt
app/src/main/java/com/ly/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/ly/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
